--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 }
 
 ul{
-    margin: 0;
+    margin: 0 ;
     padding: 0;
 }
 
@@ -16,7 +16,7 @@ ul li{
     cursor: pointer;
     position: relative;
     padding: 12px 8px 12px 40px;
-    background: #eee;
+    background: #70aeff;
     font-size: 18px;
     transition: 0.2s;
     
@@ -27,7 +27,7 @@ ul li{
 }
 
 ul li:nth-child(odd){
-    background-color: rgb(243, 243, 243);
+    background-color: rgb(155, 199, 255);
 }
 ul li :hover{
    background: rgb(255, 255, 255);
@@ -52,14 +52,15 @@ ul li.checked::before{
 }
 
 .close{
+    border-color: #f44336;
     position: absolute;
     right: 0;
     top: 0;
     padding: 12px 16px 12px 16px;
 }
 .close:hover{
-    border-color: #f44336;
-    color: white;
+       background-color: #70aeff;
+    /* color: white; */
 }
 .nav{
 
